--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "node-sass -w scss/ -o dist/css --recursive"
+    "sass": "node-sass scss/ -o dist/css/ --recursive",
+    "sass-watch": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "author": "Juan Marges",
   "license": "ISC",
