--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "My portfolio website",
   "main": "index.js",
-  "homepage": "https://juanmarges.github.io/portfolio-sit",
+  "homepage": "https://juanmarges.github.io/portfolio-site",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sass": "node-sass scss/ -o dist/css/ --recursive",
